--- a/Region-Service/build.gradle
+++ b/Region-Service/build.gradle
@@ -17,12 +17,14 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "javax:javaee-api:8.0"
+
 
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-multipart', version: '2.26'
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.26'
     compile group: 'org.glassfish.jersey.core', name: 'jersey-common', version: '2.26'
     compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '2.26'
-    compile files('libs/Tim-JMS.jar')
+    compile files('libs/tim-jms.jar')
 }
 
 // These functions tell gradle (and possibly intellij) where the project files will be located
