--- a/Region-Service/build.gradle
+++ b/Region-Service/build.gradle
@@ -16,14 +16,26 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "junit:junit:4.12"
     compile "javax:javaee-api:8.0"
+    compile "javax.persistence:javax.persistence-api:2.2"
+    compile "com.sun.faces:jsf-api:2.2.16"
+    compile "com.sun.faces:jsf-impl:2.2.16"
+    compile "org.glassfish.jersey.inject:jersey-hk2:2.26"
+    compile group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.7.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 
-
+    compile group: 'org.jvnet.mimepull', name: 'mimepull', version: '1.9.7'
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-multipart', version: '2.26'
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.26'
     compile group: 'org.glassfish.jersey.core', name: 'jersey-common', version: '2.26'
     compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '2.26'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    compile group: 'org.apache.activemq', name: 'activemq-all', version: '5.15.3'
+
+
+    // https://mvnrepository.com/artifact/org.apache.derby/derby
+    testCompile group: 'org.apache.derby', name: 'derby', version: '10.14.1.0'
     compile files('libs/tim-jms.jar')
 }
 
