--- a/Entities/build.gradle
+++ b/Entities/build.gradle
@@ -39,6 +39,15 @@ sourceSets {
     }
 }
 
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    // https://mvnrepository.com/artifact/javax.persistence/persistence-api
+    compile group: 'javax.persistence', name: 'persistence-api', version: '1.0'
+    // https://mvnrepository.com/artifact/javax.validation/validation-api
+    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+}
+
 jar {
     manifest {
         attributes 'Main-Class': 'com.github.timgoes1997'
