--- a/Region-Service/build.gradle
+++ b/Region-Service/build.gradle
@@ -18,6 +18,8 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
+
+    compile group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.7.1'
     compile "javax.persistence:javax.persistence-api:2.2"
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-multipart', version: '2.26'
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.26'
